--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "com.indusfo.repertorymanage"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -33,4 +33,5 @@ dependencies {
 
     api files('libs/fastjson-1.2.28.jar')
     api files('libs/gson-2.8.5.jar')
+    api files('libs/xUtils-2.6.14.jar')
 }
